network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: hse-coursework-health
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth-api
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
